# InEKF

./: CMakeLists.txt  README.md
include/: common.h  inekf.h  matrix_lie_group.h  noise.h  observation.h  state.h
matrix_lie_group_template/: matrix_lie_group_template.cpp  matrix_lie_group_template.h  state_template.cpp  state_template.h
src/: inekf.cpp  matrix_lie_group.cpp  noise.cpp  observation.cpp  state.cpp
